--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ messages when their focus is on something else, or harassment when they seek soc
 recognizable or obvious to a user within a particular interaction. Visiting a website may involve
 the actors that contribute to operating that site, but also actors with network access,
 which may include: Internet service providers; other network operators; local institutions providing
-a network connection including schools, libraries or universities; government intelligence services;
+a network connection including schools, libraries, or universities; government intelligence services;
 malicious hackers who have gained access to the network or the systems of any of the other actors.
 High-level threats including <a data-link-type="dfn|abstract-op" href="#dfn-surveillance" class="internalDFN" id="ref-for-dfn-surveillance-1">surveillance</a> may be pursued by these actors. Pervasive monitoring,
 a form of large-scale, indiscriminate surveillance, is a known attack on the privacy of users of the
@@ -1106,9 +1106,9 @@ A <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN"
 they are vulnerable or could become vulnerable, and an <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-16">actor</a> may have
 no way of knowing that a person is vulnerable.</p>
 <p>Some individuals may be more vulnerable to privacy risks or harm as a result of
-collection, misuse, loss or theft of personal data because:</p>
+collection, misuse, loss, or theft of personal data because:</p>
 <ul>
-<li>of their attributes, interests, opinions or behaviour;</li>
+<li>of their attributes, interests, opinions, or behaviour;</li>
 <li>of the situation or setting (e.g. where there is information asymmetry or other
 power imbalances);</li>
 <li>they lack the capacity to fully assess the risks;</li>
@@ -1119,11 +1119,11 @@ product or service.</li>
 </ul>
 <p>Additional privacy protections may be needed for personal data of vulnerable
 people or <a href="#hl-sensitive-information">sensitive information</a> which could cause
-someone to become vulnerable if their personal data is collected, used or
-shared (e.g. blocking tracking elements, sensor data or information about
+someone to become vulnerable if their personal data is collected, used, or
+shared (e.g. blocking tracking elements, sensor data, or information about
 installed software or connected devices).</p>
 <p>While sometimes others can help vulnerable people assess privacy risks and
-make decisions about privacy (such as parents, <a data-link-type="dfn|abstract-op" href="#dfn-guardian" class="internalDFN" id="ref-for-dfn-guardian-1">guardians</a> and peers), everyone
+make decisions about privacy (such as parents, <a data-link-type="dfn|abstract-op" href="#dfn-guardian" class="internalDFN" id="ref-for-dfn-guardian-1">guardians</a>, and peers), everyone
 has their own right to privacy.</p>
 <section id="guardians-0"><div class="header-wrapper"><h4 id="guardians"><bdi class="secno">1.2.1 </bdi>Guardians</h4><a class="self-link" href="#guardians" aria-label="Permalink for Section 1.2.1"></a></div><p>Some <a href="#vulnerability">vulnerable people</a> need a <dfn data-plurals="guardians" id="dfn-guardian" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">guardian</dfn> to help them make good
 decisions about their own web use (e.g. children, with their parents often
@@ -1222,7 +1222,7 @@ may publish a picture of an event in which they are featured alongside others wh
 captured in the same picture would prefer their participation not to be disclosed. Another example
 of such issues are sites that enable people to upload their contacts: the person performing the
 upload might be more open to disclosing their social networks than the people they are connected to
-are. Such issues do not necessarily admit simple, straightforward solutions but they need to be
+are. Such issues do not necessarily admit simple, straightforward solutions, but they need to be
 carefully considered by people building websites.</p>
 </section><section id="transparency-and-research"><div class="header-wrapper"><h4 id="transparency-for-research"><bdi class="secno">1.3.2 </bdi>Transparency and Research</h4><a class="self-link" href="#transparency-for-research" aria-label="Permalink for Section 1.3.2"></a></div><p>While transparency rarely helps enough to inform the individual choices that <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-38">people</a> may
 make, it plays a critical role in letting researchers and reporters inform our
