Updated template & added slides

--- a/meetings/2024-03-breakouts/slides.html
+++ b/meetings/2024-03-breakouts/slides.html
@@ -6,7 +6,7 @@
   <meta charset=UTF-8>
   <meta content="width=device-width" name="viewport">
   <title>Privacy Principles</title>
-  <link rel="stylesheet" href="https://www.w3.org/Talks/Tools/b6plus/simple.css">
+  <link rel="stylesheet" href="https://www.w3.org/Talks/Tools/Shower3-2/humaaans.css">
   <!-- To use the b6+ framework, include this: -->
   <script src="https://www.w3.org/2023/Talks/TPAC/Templates/b6plus.js"></script>
   <!-- To use the Shower framework, remove b6plus above and add these two: -->
@@ -41,12 +41,37 @@
   <section class="slide">
     <h2>What?</h2>
     <ul>
-      <li><a href="https://w3ctag.github.io/privacy-principles/">https://w3ctag.github.io/privacy-principles/</a></li>
+      <li><a href="https://www.w3.org/TR/privacy-principles/">https://www.w3.org/TR/privacy-principles/</a></li>
       <li>Joint effort between the TAG and PING</li>
       <li>Appointed 12-member task force</li>
       <li>Document in wide review</li>
     </ul>
   </section>
+
+  <section class="slide">
+    <h2>Why? (1)</h2>
+    <h3>Human Rights</h3>
+    <p>"...the ethical web principles of the World Wide Web Consortium Technical Architecture Group emphasize that internationally recognized human rights need to be placed at the core of the web platform"</p>
+    <p><a href="https://digitallibrary.un.org/record/4031373">https://digitallibrary.un.org/record/4031373</a></p>
+  </section>
+
+  <section class="slide">
+    <h2>Why? (2)</h2>
+    <h3>More Human Rights</h3>
+    <ul>
+    <li>Article 12 ("interferecnce with [...] privacy")</li> 
+    <li>Article 19 ("Freedom of Opinion and Expression")
+    <li>Article 20 ("Freedom of association")</li>
+    <li>Article 18 ("Freedom of Thought")</li>
+    </ul>
+    <p><a href="https://www.un.org/en/about-us/universal-declaration-of-human-rights">https://www.un.org/en/about-us/universal-declaration-of-human-rights</a></p>
+  </section>
+
+<section class="slide">
+  <h2>Why? (3)</h2>
+  <h3>The web must "continue to be beneficial to society."</h3>
+  <p><a href="https://www.w3.org/TR/ethical-web-principles/">https://www.w3.org/TR/ethical-web-principles/</a></p>
+</section>
 
   <section class="slide cover">
     <h2>These are a few of our favorite things</h2>
@@ -73,6 +98,13 @@
 
   <section class="slide">
     <h2>2.2 Data Minimization</h2>
+    <ul>
+      <li>A principle so important we wrote it twice</li>
+      <li>"Design features to work with the minimum amount of data necessary to carry out their users' goals."</li>
+      <li>Limits the risk of data being disclosed or misused</li>
+      <li>Dates back to the the 1970s - principle of least privilege</li>
+    </ul>
+    <p>See also: <a href=""https://www.w3.org/TR/design-principles/#data-minimization">https://www.w3.org/TR/design-principles/#data-minimization</a></p>
   </section>
 
   <section class="comment">
