Mote content updates

--- a/meetings/2024-03-breakouts/slides.html
+++ b/meetings/2024-03-breakouts/slides.html
@@ -69,7 +69,8 @@
 
 <section class="slide">
   <h2>Why? (3)</h2>
-  <h3>The web must "continue to be beneficial to society."</h3>
+  <h3>Ethical Web Principles</h3>
+  <p>The web must "continue to be beneficial to society."</p>
   <p><a href="https://www.w3.org/TR/ethical-web-principles/">https://www.w3.org/TR/ethical-web-principles/</a></p>
 </section>
 
@@ -127,6 +128,11 @@
 
   <section class="slide">
     <h2>2.9 Protecting web users from abusive behaviour</h2>
+    <p>When we're building the web, let's mitigage:</p>
+    <ul>
+    <li>Digital abuse</li>
+    <li>Online Harassment</li>
+    </ul>
   </section>
 
   <section class="comment">
@@ -139,7 +145,7 @@
       <li><i><q>A context is a physical or digital environment in which people interact with other
             actors, and which the people understand as distinct from other contexts. A context is not defined in terms
             of who owns or controls it.</q></i>
-      <li>
+      
       <li>Consider the person's actual understanding and expectations as the basis for how to handle information about
         them</li>
     </ul>
