--- a/index.html
+++ b/index.html
@@ -2184,7 +2184,7 @@ Examples of [=identifiers=] for a [=person=] can be:
 </aside>
 
 If a [=person=] could reasonably be identified or re-identified through the combination of [=data=] with other
-[=data=], then each set of [=data=] is [=personal data=].
+[=data=], then both sets of [=data=] are [=personal data=].
 
 [=People=] have <dfn>privacy</dfn> in a given [=context=] when [=actors=] in
 that [=context=] follow that [=context=]'s principles when presenting
