mention potential tension beyond the EWP (#417)
Co-authored-by: Robin Berjon <robin.berjon@nytimes.com>

--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@ background to support the web community in making informed decisions about priva
 privacy into the architecture of the web.
 
 Few architectural principles are absolute, and privacy is no exception: privacy can come into tension
-with other desirable properties of an ethical architecture, and when that happens the web community
-will have to work together to strike the right balance.
+with other desirable properties of an ethical architecture, including accessibility or internationalization, 
+and when that happens the web community will have to work together to strike the right balance.
 
 </section>
 
