mention potential tension beyond the EWP (#417)
SHA: bb1015682fb508ee0cb28ee742d2d7f1ad3159ba
Reason: push, by darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -907,8 +907,8 @@ regulatory regimes.</p>
 background to support the web community in making informed decisions about privacy and in weaving
 privacy into the architecture of the web.</p>
 <p>Few architectural principles are absolute, and privacy is no exception: privacy can come into tension
-with other desirable properties of an ethical architecture, and when that happens the web community
-will have to work together to strike the right balance.</p>
+with other desirable properties of an ethical architecture, including accessibility or internationalization, 
+and when that happens the web community will have to work together to strike the right balance.</p>
 </section>
 
 <section class="introductory" id="audiences-for-this-document"><div class="header-wrapper"><h2 id="audience">Audiences for this Document</h2><a class="self-link" href="#audience" aria-label="Permalink for this Section"></a></div>
