--- a/index.html
+++ b/index.html
@@ -1476,11 +1476,11 @@ Specifications describing these APIs should also:
 <div class="practice" data-audiences="websites user-agents api-designers">
 <p>
   <span class="practicelab" id="principle-sensitive">
-    System designers
-    should not assume that particular information is or is not sensitive.
-    Whether information is considered sensitive can vary depending on a
-    [=person=]'s circumstances and the [=context=] of an interaction, and it can
-    change over time.
+    There is broad consensus that some categories of information such as credit card numbers
+    or precise geolocation are sensitive but system designers should not assume that other 
+    categories of information are therefore <em>not</em> sensitive. Whether information is 
+    considered sensitive can vary depending on a [=person=]'s circumstances and the [=context=] 
+    of an interaction, and it can change over time.
   </span>
 </p>
 </div>
