--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@ Specifications describing these APIs should also:
 <p>
   <span class="practicelab" id="principle-sensitive">
     There is broad consensus that some categories of information such as credit card numbers
-    or precise geolocation are sensitive but system designers should not assume that other 
+    or precise geolocation are sensitive, but system designers should not assume that other 
     categories of information are therefore <em>not</em> sensitive. Whether information is 
     considered sensitive can vary depending on a [=person=]'s circumstances and the [=context=] 
     of an interaction, and it can change over time.
