--- a/index.html
+++ b/index.html
@@ -1692,11 +1692,11 @@ information without breaking additional sites or user experiences.</li>
 
 
 </section></section><section id="sensitive-information"><div class="header-wrapper"><h3 id="hl-sensitive-information"><bdi class="secno">2.4 </bdi>Sensitive Information</h3><a class="self-link" href="#hl-sensitive-information" aria-label="Permalink for Section 2.4"></a></div><div class="practice principle" data-audiences="websites user-agents api-designers"><a class="marker self-link" href="#principle-sensitive"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="principle-sensitive">
-    System designers
-    should not assume that particular information is or is not sensitive.
-    Whether information is considered sensitive can vary depending on a
-    <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-65">person</a>'s circumstances and the <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-11">context</a> of an interaction, and it can
-    change over time.
+    There is broad consensus that some categories of information such as credit card numbers
+    or precise geolocation are sensitive, but system designers should not assume that other 
+    categories of information are therefore <em>not</em> sensitive. Whether information is 
+    considered sensitive can vary depending on a <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-65">person</a>'s circumstances and the <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-11">context</a> 
+    of an interaction, and it can change over time.
   </span>
 
 <div class="audience-label"><span class="audience-websites">websites</span><span class="audience-user-agents">user agents</span><span class="audience-api-designers">API designers</span></div></div>
@@ -1732,17 +1732,6 @@ particularly if location information is repeatedly requested over time or if the
 <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-24">actor</a> has other relevant information about the <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-66">person</a> [<a href="https://www.rfc-editor.org/rfc/rfc6772#section-13.5">RFC6772</a>].</p>
 </aside>
 
-<p>When considering whether a class of information is likely to be sensitive to
-a person, consider at least these factors:</p>
-<ul>
-<li>whether it serves as a persistent <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-4">identifier</a> (see
-<a href="https://www.w3.org/TR/fingerprinting-guidance/#identifying-fingerprinting-surface-and-evaluating-severity">severity</a> in
-<cite><a data-matched-text="[[[fingerprinting-guidance]]]" href="https://www.w3.org/TR/fingerprinting-guidance/">Mitigating Browser Fingerprinting in Web Specifications</a></cite>);</li>
-<li>whether it discloses substantial (including intimate details or inferences)
-information about the person using the system or other people;</li>
-<li>whether it can be used to infer particular characteristics that put the person at risk of greater harm;</li>
-<li>whether it enables other threats, like intrusion.</li>
-</ul>
 </section><section id="data-rights-0"><div class="header-wrapper"><h3 id="data-rights"><bdi class="secno">2.5 </bdi>Data Rights</h3><a class="self-link" href="#data-rights" aria-label="Permalink for Section 2.5"></a></div><div class="practice principle" data-audiences="websites user-agents api-designers"><a class="marker self-link" href="#respect-data-rights"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="respect-data-rights">
     <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-67">People</a> have certain rights over <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-28">data</a> that is about themselves, and these rights should
     be facilitated by their <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agent</a> and the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-25">actors</a> that are <a data-link-type="dfn|abstract-op" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-22">processing</a> their
@@ -1809,7 +1798,7 @@ rights by people over data about themselves are inherent to <a data-link-type="d
 
 <p>Data is <dfn data-lt="de-identify|de-identification|de-identified" id="dfn-de-identify" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">de-identified</dfn> when there exists a high level of confidence
 that no <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-74">person</a> described by the data can be identified, directly or indirectly
-(e.g. via association with an <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-5">identifier</a>, user agent, or device), by that data alone or in
+(e.g. via association with an <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-4">identifier</a>, user agent, or device), by that data alone or in
 combination with other available information. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.</p>
@@ -1822,7 +1811,7 @@ release of the de-identified data. ([<cite><a class="bibref" data-link-type="bib
 </ol>
 <p>Different situations involving <a data-link-type="dfn|abstract-op" href="#dfn-controlled-de-identified-data" class="internalDFN" id="ref-for-dfn-controlled-de-identified-data-1">controlled de-identified data</a> will require different controls.
 For instance, if the <a data-link-type="dfn|abstract-op" href="#dfn-controlled-de-identified-data" class="internalDFN" id="ref-for-dfn-controlled-de-identified-data-2">controlled de-identified data</a> is <em>only</em> being processed by one
-<a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-28">actor</a>, typical controls include making sure that the <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-6">identifiers</a> used in the data are unique
+<a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-28">actor</a>, typical controls include making sure that the <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-5">identifiers</a> used in the data are unique
 to that dataset, that any person (e.g. an employee of the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-29">actor</a>) with access to the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-38">data</a> is
 barred (e.g. based on legal terms) from sharing the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-39">data</a> further, and that technical measures
 exist to prevent re-identification or the joining of different data sets involving this <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-40">data</a>.</p>
@@ -1833,10 +1822,10 @@ guarantee the maintenance of pseudonymity are preserved.</p>
 <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-30">actors</a>. In such cases, good examples of typical controls that are representative of best
 practices would include making sure that:</p>
 <ul>
-<li><p>the <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-7">identifiers</a> used in the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-41">data</a> are under the direct and exclusive control of the <a data-link-type="dfn|abstract-op" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-2">first party</a> (the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-31">actor</a> a person is directly interacting with) who is prevented by strict controls
+<li><p>the <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-6">identifiers</a> used in the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-41">data</a> are under the direct and exclusive control of the <a data-link-type="dfn|abstract-op" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-2">first party</a> (the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-31">actor</a> a person is directly interacting with) who is prevented by strict controls
 from matching the identifiers with the data;</p>
 </li>
-<li><p>when these <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-8">identifiers</a> are shared with a <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-1">third party</a>, they are made unique
+<li><p>when these <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-7">identifiers</a> are shared with a <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-1">third party</a>, they are made unique
 to that <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-2">third party</a> such that if they are shared with more than one
 <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-3">third party</a> these cannot then match them up with one another;</p>
 </li>
@@ -2294,7 +2283,7 @@ even if another <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="int
 with.</p>
 </section><section id="acting-on-data-0"><div class="header-wrapper"><h3 id="acting-on-data"><bdi class="secno">A.4 </bdi>Acting on Data</h3><a class="self-link" href="#acting-on-data" aria-label="Permalink for Appendix A.4"></a></div><p>We define <dfn data-lt="data|personal data" id="dfn-data" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">personal data</dfn> as any information that is directly or
 indirectly related to an identified or identifiable <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-128">person</a>, such as by reference to an
-<a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-9">identifier</a> ([<cite><a class="bibref" data-link-type="biblio" href="#bib-gdpr" title="General Data Protection Regulations (GDPR) / Regulation (EU) 2016/679">GDPR</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-oecd-guidelines" title="OECD Guidelines on the Protection of Privacy and Transborder Flows of Personal Data">OECD-Guidelines</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-convention-108" title="Convention for the Protection of Individuals with regard to Automatic Processing of Personal Data">Convention-108</a></cite>]).</p>
+<a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-8">identifier</a> ([<cite><a class="bibref" data-link-type="biblio" href="#bib-gdpr" title="General Data Protection Regulations (GDPR) / Regulation (EU) 2016/679">GDPR</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-oecd-guidelines" title="OECD Guidelines on the Protection of Privacy and Transborder Flows of Personal Data">OECD-Guidelines</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-convention-108" title="Convention for the Protection of Individuals with regard to Automatic Processing of Personal Data">Convention-108</a></cite>]).</p>
 <p>On the web, an <dfn data-plurals="identifiers" id="dfn-identifier" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">identifier</dfn> of some type is typically assigned for an
 <a data-link-type="dfn|abstract-op" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-4">identity</a> as seen by a website, which makes it easier for an automated
 system to store data about that <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-129">person</a>.</p>
@@ -2302,7 +2291,7 @@ system to store data about that <a data-link-type="dfn|abstract-op" href="#dfn-i
     <a class="self-link" href="#example-identifiers">Example<bdi> 14</bdi></a><span class="example-title">: Identifiers</span>
   </div>
 
-<p>Examples of <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-10">identifiers</a> for a <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-130">person</a> can be:</p>
+<p>Examples of <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-9">identifiers</a> for a <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-130">person</a> can be:</p>
 <ul>
 <li>their name,</li>
 <li>an identification number including those mapping to a device that this
@@ -2314,7 +2303,7 @@ system to store data about that <a data-link-type="dfn|abstract-op" href="#dfn-i
 configuration characteristics), or</li>
 <li>factors specific to their physical, physiological, genetic, mental, economic,
 cultural, social, or behavioral <a data-link-type="dfn|abstract-op" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-5">identity</a>,</li>
-<li>strings derived from other <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-11">identifiers</a>, for instance through hashing.</li>
+<li>strings derived from other <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-10">identifiers</a>, for instance through hashing.</li>
 </ul>
 </aside>
 
@@ -2526,11 +2515,11 @@ User agents should provide a way to enable or disable <a data-link-type="dfn|abs
 needs.
 </span><span class="audience-label"><span class="audience-user-agents">user agents</span></span></li><li><a class="marker self-link" href="#bp-new-web-apis-should-guard-users-information-at-least-as-well-as-existing-apis-that-are-expected-to-stay-in-the-web-platform"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">New web APIs should guard users' information at least
   as well as existing APIs that are expected to stay in the web platform.</span><span class="audience-label"><span class="audience-api-designers">API designers</span><span class="audience-user-agents">user agents</span></span></li><li><a class="marker self-link" href="#principle-sensitive"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
-    System designers
-    should not assume that particular information is or is not sensitive.
-    Whether information is considered sensitive can vary depending on a
-    <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-139">person</a>'s circumstances and the <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-38">context</a> of an interaction, and it can
-    change over time.
+    There is broad consensus that some categories of information such as credit card numbers
+    or precise geolocation are sensitive, but system designers should not assume that other 
+    categories of information are therefore <em>not</em> sensitive. Whether information is 
+    considered sensitive can vary depending on a <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-139">person</a>'s circumstances and the <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-38">context</a> 
+    of an interaction, and it can change over time.
   </span><span class="audience-label"><span class="audience-websites">websites</span><span class="audience-user-agents">user agents</span><span class="audience-api-designers">API designers</span></span></li><li><a class="marker self-link" href="#respect-data-rights"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
     <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-140">People</a> have certain rights over <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-59">data</a> that is about themselves, and these rights should
     be facilitated by their <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agent</a> and the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-69">actors</a> that are <a data-link-type="dfn|abstract-op" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-37">processing</a> their
@@ -3560,11 +3549,11 @@ Wendy Seltzer.</p>
     <li>
       <a href="#ref-for-dfn-identifier-1" title="§ 1.1.1 Opt-in, Consent, Opt-out, Global Controls">§ 1.1.1 Opt-in, Consent, Opt-out, Global Controls</a> <a href="#ref-for-dfn-identifier-2" title="Reference 2">(2)</a> 
     </li><li>
-      <a href="#ref-for-dfn-identifier-3" title="§ 2.4 Sensitive Information">§ 2.4 Sensitive Information</a> <a href="#ref-for-dfn-identifier-4" title="Reference 2">(2)</a> 
+      <a href="#ref-for-dfn-identifier-3" title="§ 2.4 Sensitive Information">§ 2.4 Sensitive Information</a> 
     </li><li>
-      <a href="#ref-for-dfn-identifier-5" title="§ 2.6 De-identified Data">§ 2.6 De-identified Data</a> <a href="#ref-for-dfn-identifier-6" title="Reference 2">(2)</a> <a href="#ref-for-dfn-identifier-7" title="Reference 3">(3)</a> <a href="#ref-for-dfn-identifier-8" title="Reference 4">(4)</a> 
+      <a href="#ref-for-dfn-identifier-4" title="§ 2.6 De-identified Data">§ 2.6 De-identified Data</a> <a href="#ref-for-dfn-identifier-5" title="Reference 2">(2)</a> <a href="#ref-for-dfn-identifier-6" title="Reference 3">(3)</a> <a href="#ref-for-dfn-identifier-7" title="Reference 4">(4)</a> 
     </li><li>
-      <a href="#ref-for-dfn-identifier-9" title="§ A.4 Acting on Data">§ A.4 Acting on Data</a> <a href="#ref-for-dfn-identifier-10" title="Reference 2">(2)</a> <a href="#ref-for-dfn-identifier-11" title="Reference 3">(3)</a> 
+      <a href="#ref-for-dfn-identifier-8" title="§ A.4 Acting on Data">§ A.4 Acting on Data</a> <a href="#ref-for-dfn-identifier-9" title="Reference 2">(2)</a> <a href="#ref-for-dfn-identifier-10" title="Reference 3">(3)</a> 
     </li>
   </ul>
     </div><div class="dfn-panel" hidden="" role="dialog" aria-modal="true" id="dfn-panel-for-dfn-privacy" aria-label="Links in this document to definition: privacy">
