Include UAs as actors that should not retaliate. (#419)

--- a/index.html
+++ b/index.html
@@ -2026,7 +2026,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
 
 ## Non-Retaliation {#non-retaliation}
 
-<div class="practice" data-audiences="websites">
+<div class="practice" data-audiences="websites user-agents">
   <span class="practicelab" id="principle-do-not-retaliate">
     [=Actors=] must not retaliate against [=people=] who protect their [=data=] against
     non-essential [=processing=] or exercise rights over their [=data=].
