Common Concepts: Turn this into a Background section.
nb. changes the #boring-terminology anchor to #background-and-key-concepts

--- a/index.html
+++ b/index.html
@@ -2099,7 +2099,13 @@ mitigating forms of data collection, including <a>browser fingerprinting</a>.
 
 <section class="appendix">
 
-# Common Concepts {#boring-terminology}
+# Background and Key Concepts {#background-and-key-concepts}
+
+Digital privacy is a complex topic, and has been and can be examined from many different perspectives,
+both in theory and in practice.
+This section provides a summary background of the digital privacy landscape
+to set the context in which these Privacy Principles were written.
+For more detail, we refer you to our references section for further background reading.
 
 ## People {#people}
 
