Setup: Add 'how to read' and merge audience and fits in into Purpose section

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ This document is considered stable by the TAG and is ready for wide review.
 
 <section class="introductory">
 
-## How This Document Fits In
+## Purpose of this document
 
 This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy)
 from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focuses on privacy, this should
@@ -579,11 +579,9 @@ Few architectural principles are absolute, and privacy is no exception: privacy 
 with other desirable properties of an ethical architecture, including accessibility or internationalization, 
 and when that happens the web community will have to work together to strike the right balance.
 
-</section>
-
 <section class="introductory">
 
-## Audiences for this Document {#audience}
+### Audiences for this document {#audience}
 
 The primary audiences for this document are
 
@@ -598,13 +596,39 @@ Additional audiences include:
  * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
-cycle of a new web standard or feature, or in the development of web products. Beginning with privacy in mind will help avoid the need to
+cycle of a new web standard or feature, or in the development of web products.
+Beginning with privacy in mind will help avoid the need to
 add special cases later to address unforeseen but predictable issues or
 to build systems that turn out to be unacceptable to users.
 
 Because this document guides privacy reviews of new standards, authors of web
 specifications should consult it early in the design to make sure their feature
 passes the review smoothly.
+
+</section>
+
+<section class="introductory">
+
+### How to read this document
+
+Digital privacy is a complex topic, and has been and can be examined from many different perspectives,
+both in theory and in practice.
+
+This document does not provide a complete description of the digital privacy landscape,
+so if you are a specialist in a particular technical, social or legal field,
+but with limited privacy expertise, we recommend that you read the Background and Key Concepts section
+of this document, and follow the links to further background reading if you are able.
+This should help you to place the Privacy Principles in the context we intend,
+and make it easier for you to understand and (if applicable) implement them in your practice.
+
+If you already have expertise relating to digital privacy,
+and you're reading this document with the perspective of a particular domain specialism - for example
+computer science, information architecture, software engineering, law, or social science - it is worthwhile
+to take the time to familiarize yourself with the Background and Key Concepts section.
+This should help to make sure you understand how we use terminology which may vary between domains,
+and help you to see the the underlying interdisciplinary framework for the Privacy Principles.
+
+</section>
 
 </section>
 
