Purpose: minor edit; sketch Why Important section

--- a/index.html
+++ b/index.html
@@ -558,22 +558,14 @@ from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focus
 not be taken as an indication that privacy is always more important than other ethical web principles, and
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
-Privacy on the web is primarily regulated by two forces: the architectural capabilities that the web
-platform exposes (or does not expose), and laws in the various jurisdictions where the web is used
-([[New-Chicago-School]], [[Standard-Bodies-Regulators]]). These regulatory mechanisms are separate; a law in one country does not
-(and should not) change the architecture of the whole web, and likewise web specifications cannot
-override any given law (although they can affect how easy it is to create and enforce law). The web
-is not merely an implementation of a particular legal privacy regime; it has distinct features and
-guarantees driven by shared values that often exceed legal requirements for privacy.
+Our goal for this document is to provide enough background to support the web community
+in making informed decisions about privacy
+and in weaving privacy into the architecture of the web.
 
-However, the overall goal of privacy on the web is served best when technology and law complement
+The overall goal of privacy on the web is served best when technology and law complement
 each other. This document seeks to establish shared concepts as an aid to technical efforts to
 regulate privacy on the web. It may also be useful in pursuing alignment with and between legal
 regulatory regimes.
-
-Our goal for this document is not to cover all possible privacy issues, but rather to provide enough
-background to support the web community in making informed decisions about privacy and in weaving
-privacy into the architecture of the web.
 
 Few architectural principles are absolute, and privacy is no exception: privacy can come into tension
 with other desirable properties of an ethical architecture, including accessibility or internationalization, 
@@ -631,6 +623,18 @@ and help you to see the the underlying interdisciplinary framework for the Priva
 </section>
 
 </section>
+
+# Why is privacy on the web important?
+
+* increasing automation 
+* always privacy principles at work
+* Privacy on the web is primarily regulated by two forces: the architectural capabilities that the web
+platform exposes (or does not expose), and laws in the various jurisdictions where the web is used
+([[New-Chicago-School]], [[Standard-Bodies-Regulators]]). These regulatory mechanisms are separate; a law in one country does not
+(and should not) change the architecture of the whole web, and likewise web specifications cannot
+override any given law (although they can affect how easy it is to create and enforce law). The web
+is not merely an implementation of a particular legal privacy regime; it has distinct features and
+guarantees driven by shared values that often exceed legal requirements for privacy.
 
 # An Introduction to Privacy on the Web {#intro}
 
