Purpose: remove unnecessarily defensive EWP sentence

--- a/index.html
+++ b/index.html
@@ -554,9 +554,7 @@ This document is considered stable by the TAG and is ready for wide review.
 ## Purpose of this document
 
 This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy)
-from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focuses on privacy, this should
-not be taken as an indication that privacy is always more important than other ethical web principles, and
-this document doesn't address how to balance the different ethical web principles if they come into conflict.
+from the [[[Ethical-Web]]]: "Security and privacy are essential."
 
 Our goal for this document is to provide enough background to support the web community
 in making informed decisions about privacy
